syntax = "proto3";
import "common/loan.proto";
import "common/report.proto";

option csharp_namespace = "LoansReadMicroservice";

package LoansMicroservice;

service LoansRead {
  rpc Get (GetLoansRequest) returns (GetLoansResponse);
  rpc GetLoansByPayments (GetLoansByPaymentsRequest) returns (GetLoansResponse);
  rpc AggregateUserActivity (AggregateUserActivityRequest) returns (AggregateUserActivityResponse);
  rpc AggregateOverall (AggregateOverallRequest) returns (AggregateOverallResponse);
}

message GetLoansRequest {
  int64 flowId = 1;
  repeated string ids = 2;
}

message GetLoansByPaymentsRequest {
  int64 flowId = 1;
  repeated string paymentsIds = 2;
}

message GetLoansResponse {
  repeated Loan loans = 1;
}

message AggregateUserActivityRequest {
  int64 flowId = 1;
  repeated string paymentsIds = 2;
  int64 timestampFrom = 3;
  int64 timestampTo = 4;
  Granularity granularity = 5;
}